--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-    <com.LG.mreader.GPT.TiledImageView
+    <com.LG.mreader.ViewModel.TiledImageView
         android:id="@+id/tiledImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
